# syncpack

./: .gitignore  Cargo.toml  README.md  justfile  package.json  pnpm-lock.yaml  rustfmt.toml  temp.sh
.github/workflows/: ci.yml  release.yml
fixtures/: package.json
fixtures/fluid-framework/: .syncpackrc.json  package.json
fixtures/fluid-framework/examples/apps/collaborative-textarea/: package.json
fixtures/fluid-framework/examples/client-logger/app-insights-logger/: package.json
fixtures/fluid-framework/examples/data-objects/canvas/: package.json
fixtures/misc/: package.json
npm/: index.js
scripts/: build.sh  coverage.sh  create-npm-binary-package.js  dev.sh  fluid.sh  misc.sh  prod.sh  watch.sh
scripts/release/: npm-binary.mjs  npm-root.mjs
src/: cli.rs  config.rs  context.rs  dependencies.rs  dependency.rs  dependency_type.rs  effects.rs  effects_fix.rs  effects_lint.rs  effects_mock.rs  effects_noop.rs  expect.rs  file_paths.rs  fix.rs  fix_effects.rs  format.rs  format_test.rs  group_selector.rs  instance.rs  instance_group.rs  instance_state.rs  json_file.rs  lint.rs  logger.rs  main.rs  package_json.rs  packages.rs  path_buf.rs  rcfile.rs  read_file.rs  semver_group.rs  semver_range.rs  semver_ranges.rs  specifier.rs  specifier_test.rs  status_code.rs  strategy.rs  version_group.rs  versions.rs  visit_packages.rs  (+1 more)
src/effects/: fix.rs  lint.rs  mock.rs  ui.rs
src/groups/: selector.rs  semver.rs  version.rs
src/specifier/: any_specifier.rs  non_semver.rs  orderable.rs  parser.rs  regexes.rs  semver.rs  semver_range.rs  simple_semver.rs  simple_semver_test.rs  specifier_tree.rs
src/test/: expect.rs  mock.rs  mock_effects.rs  test.rs
(+13 files in other folders)
