[package]
name = "rust-syncpack"
version = "0.1.0"
authors = ["Jamie Mason <jamie@foldleft.io>"]
edition = "2021"

[dependencies]
clap = "4.4"
colored = "2"
glob = "0.3"
lazy_static = "1.4"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
version-compare = "0.1"
