[package]
name = "syncpack"
version = "14.0.0-alpha.0"
authors = ["Jamie Mason <jamie@foldleft.io>"]
edition = "2021"
homepage = "https://jamiemason.github.io/syncpack"
repository = "https://github.com/JamieMason/syncpack/tree/rust/main"
description = "Consistent dependency versions in large JavaScript Monorepos"
license = "MIT"
keywords = [
    "npm",
    "yarn",
    "linter",
    "monorepo",
    "semver",
    "version-manager",
    "pnpm",
    "nx",
    "version-management",
    "turborepo",
]
readme = "./README.md"
publish = false

[dependencies]
clap = { version = "4.4", features = ["cargo"] }
colored = "2"
env_logger = "0.11"
glob = "0.3"
globset = "0.4"
icu = "1.4"
itertools = "0.13"
lazy_static = "1.4"
log = "0.4"
node-semver = "2.1"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
version-compare = "0.2"
